tests/inputs/invalid/syntax/missing_end.crbc
type int is integer;
routine main () : integer is
    return 0;
